[gd_scene load_steps=7 format=3 uid="uid://b5pnpbxbv7s4y"]

[ext_resource type="PackedScene" uid="uid://hy5mfuk4bsut" path="res://scenes/Menu.tscn" id="1_bjl1e"]
[ext_resource type="Script" path="res://scripts/MultiplayerController.gd" id="1_ehst3"]
[ext_resource type="PackedScene" uid="uid://b4qecf23eusp0" path="res://scenes/rts/rts_player.tscn" id="2_q2hfg"]
[ext_resource type="PackedScene" uid="uid://cfoshfln0a0vf" path="res://scenes/hns/hns_player.tscn" id="3_51nfn"]
[ext_resource type="PackedScene" uid="uid://dri5pxn8lbno0" path="res://scenes/td/td_player.tscn" id="4_ev1oq"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3igut"]

[node name="Multiplayer" type="Node2D" node_paths=PackedStringArray("level_container", "entities", "player_spawner", "entity_spawner", "multiplayer_menu")]
y_sort_enabled = true
texture_filter = 2
script = ExtResource("1_ehst3")
address = "localhost"
level_container = NodePath("Level")
entities = NodePath("Entities")
player_spawner = NodePath("PlayerSpawner")
entity_spawner = NodePath("EntitySpawner")
faction_scenes = {
0: ExtResource("2_q2hfg"),
1: ExtResource("3_51nfn"),
2: ExtResource("4_ev1oq")
}
multiplayer_menu = NodePath("Menu")
unit_spawner_scene = "res://scenes/multiplayer/unit_spawner.tscn"
level_scene = "res://scenes/game/game.tscn"

[node name="Menu" parent="." node_paths=PackedStringArray("controller") instance=ExtResource("1_bjl1e")]
controller = NodePath("..")

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/game/game.tscn")
spawn_path = NodePath("../Level")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Network")

[node name="Level" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Network" type="Node2D" parent="."]
y_sort_enabled = true

[node name="EntitySpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Entities")

[node name="Entities" type="Node2D" parent="."]
y_sort_enabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3igut")

[connection signal="child_entered_tree" from="Level" to="." method="_on_level_child_entered_tree"]
[connection signal="child_exiting_tree" from="Level" to="." method="_on_level_child_exiting_tree"]
